--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
 /*  your css code here. If applicable */
+#box{
+	border:2px solid black;
+	background-color:white;
+	padding:20px;
+	text-align:left;
+}
+tex{
+     font-style:bold;
+}
+
+
